# MyRayTracer

./: .gitignore  AABB.h  BVH.h  CMakeLists.txt  Camera.h  Color.h  EiffelTower.off  Image.h  LICENSE  LightSource.h  Main.cpp  Material.h  Mesh.h  Orientation.h  PNG.h  README.md  Ray.h  Scene.h  Transform.h  Triangle.h  Vec3.h  Vertex.h  Worley.h  tetra.off
resources/: golem.off
